First Look Of Indie Bot: Bot Emulator can accept text/speech and return list of grain dealers

--- a/IndieBot101/Web.config
+++ b/IndieBot101/Web.config
@@ -7,8 +7,8 @@
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
     <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="MicrosoftAppId" value="0eae598a-a0da-498f-9eb0-7450a86fec03" />
+    <add key="MicrosoftAppPassword" value="7yk1XSj7VKMOJw73BXZRWQZ" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
